--- a/views/tasks.ejs
+++ b/views/tasks.ejs
@@ -8,22 +8,18 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/main.css">
 </head>
+<%= taskToDo[0].taskItem %>
 <body class="mt-5">
-<<<<<<< HEAD
-    <div class="container mx-auto text-center">
-            <h1>Ninja Tasker</h1>
-=======
      <div class="container mx-auto text-center">
         <h1>Ninja Tasker</h1>
->>>>>>> a49c729657e91aa5f18ee8e873e98a2e89938cd7
         <form action="/tasks" method="POST" class="mt-0">
             <input class="form-control form-control-lg" type="text" name="task" placeholder="Add item ...">
             <button type="submit" class="btn btn-primary btn-lg mt-1 mb-5 btn-block">Add Mission</button>
         </form>
         <ul class="list-group list-group-flush mt-5 text-light">
-            <li class="list-group-item">Work on my portfolio</li>
-            <li class="list-group-item">Code and watch anime</li>
-            <li class="list-group-item">Sleep</li>
+             <% for (let i=0; i < taskToDo.length; i++ ) {%>
+                <li class="list-group-item"><%= taskToDo[i].taskItem %></li>
+            <% } %>
         </ul>
     </div>
     <script src="/js/main.js"></script>
