--- a/views/tasks.ejs
+++ b/views/tasks.ejs
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/main.css">
 </head>
-<%= taskToDo[0].taskItem %>
+
 <body class="mt-5">
      <div class="container mx-auto text-center">
         <h1>Ninja Tasker</h1>
         <form action="/tasks" method="POST" class="mt-0">
-            <input class="form-control form-control-lg" type="text" name="task" placeholder="Add item ..." required>
+            <input class="form-control form-control-lg" type="text" name="taskItem" placeholder="Add item ..." required>
             <button type="submit" class="btn btn-primary btn-lg mt-1 mb-5 btn-block">Add Mission</button>
         </form>
         <ul class="list-group list-group-flush mt-5 text-light">
