--- a/views/login.ejs
+++ b/views/login.ejs
@@ -29,6 +29,7 @@
           </div>
           <button type="submit" class="btn btn-default">Login</button>
         </form>
+        <a href="/login/facebook">Log in with facebook</a>
         <br />
         <p>Or sign up <a href="/">here</a></p>
       </div>
